c/src/test/resources/c/nec_inline_bnc/valid/ex2-3.ctrl
<controlFile>
  <sourceFile name="../ex2.c" id="1" />
  <run>
    <startPosition fileId="1" line="19" />
    <wayPoint fileId="1" line="26" />
    <wayPoint fileId="1" line="31" >
      <function funcName="test" >
        <wayPoint fileId="1" line="8" >
          <loop iterTimes="3" />
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="33" />
  </run>
</controlFile>