c/src/test/resources/c/nec_inline_bnc/invalid/ex43.ctrl
<controlFile>
  <sourceFile name="../ex43.c" id="1" />
  <run>
    <startPosition fileId="1" line="83" />
    <wayPoint fileId="1" line="91" >
      <loop iterTimes="10" >
        <wayPoint fileId="1" line="92" >
          <function funcName="bufAlloc" >
            <wayPoint fileId="1" line="31" >
              <loop iterTimes="20" />
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
    </wayPoint>
    <wayPoint fileId="1" line="94" >
      <loop iterTimes="4" >
        <wayPoint fileId="1" line="95" >
          <loop iterTimes="3" />
        </wayPoint>
      </loop>
    </wayPoint>
    <wayPoint fileId="1" line="100" >
      <loop iterTimes="10" >
        <wayPoint fileId="1" line="101" >
          <loop iterTimes="3" />
        </wayPoint>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="113" />
  </run>
</controlFile>